# segmentor

./: .env.example  README.md  app.py  download_gee_image.py  main.py  prithvi_input.npy  pyproject.toml  sample_data.csv  worldcover.npy
agent/: data_formatter.py  filmstrip_generator.py  landcover_🌾_santa_cruz_bolivia_20260111_031425.csv  main.py  narrative_agent.py  pdf_publisher.py  pipeline.py  report_assembler.py  report_template.html  report_🌾_santa_cruz_bolivia.html
